// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit tests for the DatasetForm component. Should match snapshot -. create 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="flex flex-col"
  >
    <div
      class="hidden lg:block px-8"
    >
      <div
        class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
      >
        <a
          class="inline text-dial-sapphire h5"
          href="/"
        >
          Home
        </a>
        <div
          class="inline h5"
        >
           &gt; 
          <a
            class="text-dial-gray-dark"
            href="/"
          />
        </div>
      </div>
    </div>
    <div
      class="pb-8 px-8"
    >
      <div
        class="sm:px-0 max-w-full mx-auto"
        id="content"
      >
        <form>
          <div
            class="bg-edit shadow-md rounded px-8 pt-6 pb-12 mb-4 flex flex-col gap-3"
          >
            <div
              class="text-2xl font-semibold text-dial-sapphire pb-4"
            >
              Create New Dataset
            </div>
            <div
              class="flex flex-col lg:flex-row gap-4"
            >
              <div
                class="w-full lg:w-1/2 flex flex-col gap-y-3"
              >
                <div
                  class="form-field-wrapper"
                  data-testid="dataset-name"
                >
                  <label
                    class="form-field-label required-field"
                    for="name"
                  >
                    Dataset Name
                  </label>
                  <input
                    class="w-full"
                    data-testid="dataset-name-input"
                    id="name"
                    name="name"
                    placeholder="Dataset Name"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="form-field-wrapper"
                >
                  <label
                    class="form-field-label"
                  >
                    Dataset Other Name
                  </label>
                  <div
                    class="flex gap-x-2"
                  >
                    <input
                      class="w-full"
                      name="aliases.0.value"
                      placeholder="Dataset Other Name"
                      type="text"
                      value=""
                    />
                    <button
                      class="shadow-md p-3 bg-dial-sapphire hover:bg-dial-angel"
                      data-testid="icon-button"
                      type="button"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 448 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                <div
                  class="form-field-wrapper"
                  data-testid="dataset-website"
                >
                  <label
                    class="form-field-label required-field"
                    for="website"
                  >
                    Data URL
                  </label>
                  <div
                    class="border border-transparent url-input bg-white flex items-center"
                  >
                    <input
                      class="url w-full placeholder-dial-gray focus:outline-0"
                      id="website"
                      placeholder="Data URL"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="form-field-wrapper"
                  data-testid="dataset-visualizationUrl"
                >
                  <label
                    class="form-field-label"
                    for="visualizationUrl"
                  >
                    Dataset Visualization URL
                  </label>
                  <div
                    class="border border-transparent url-input bg-white flex items-center"
                  >
                    <input
                      class="url w-full placeholder-dial-gray focus:outline-0"
                      id="visualizationUrl"
                      placeholder="Dataset Visualization URL"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="form-field-wrapper"
                >
                  <label
                    class="form-field-label"
                  >
                    Dataset Type
                  </label>
                  <div
                    class=" css-l45kjq-container"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-:r0:-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class="react-select__control css-qv4grc-control"
                    >
                      <div
                        class="react-select__value-container react-select__value-container--has-value css-17t7gkf-ValueContainer"
                      >
                        <div
                          class="react-select__single-value css-1dimb5e-singleValue"
                        >
                          Dataset
                        </div>
                        <div
                          class="react-select__input-container css-qbdosj-Input"
                          data-value=""
                        >
                          <input
                            aria-autocomplete="list"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class="react-select__input"
                            id="react-select-id-datasetType"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="form-field-wrapper"
                  data-testid="dataset-logo"
                >
                  <label
                    class="form-field-label"
                  >
                    Logo
                  </label>
                  <label
                    class="flex items-center"
                  >
                    <input
                      accept=".jpg,.jpeg,.png,.bmp"
                      class="bg-white file:hidden w-full pr-10"
                      data-testid="file-uploader"
                      name="imageFile"
                      type="file"
                    />
                    <div
                      class="-ml-11 flex p-1"
                    >
                      <span
                        class="h-full pl-1 border-l text-2xl text-dial-gray-dark border-dial-gray-dark"
                      >
                        <svg
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          version="1.1"
                          viewBox="0 0 16 16"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M13 14h-10v-2l3-5 4.109 5 2.891-2v4z"
                          />
                          <path
                            d="M13 7.5c0 0.828-0.672 1.5-1.5 1.5s-1.5-0.672-1.5-1.5 0.672-1.5 1.5-1.5c0.828 0 1.5 0.672 1.5 1.5z"
                          />
                          <path
                            d="M14.341 3.579c-0.347-0.473-0.831-1.027-1.362-1.558s-1.085-1.015-1.558-1.362c-0.806-0.591-1.197-0.659-1.421-0.659h-7.75c-0.689 0-1.25 0.561-1.25 1.25v13.5c0 0.689 0.561 1.25 1.25 1.25h11.5c0.689 0 1.25-0.561 1.25-1.25v-9.75c0-0.224-0.068-0.615-0.659-1.421zM12.271 2.729c0.48 0.48 0.856 0.912 1.134 1.271h-2.406v-2.405c0.359 0.278 0.792 0.654 1.271 1.134zM14 14.75c0 0.136-0.114 0.25-0.25 0.25h-11.5c-0.135 0-0.25-0.114-0.25-0.25v-13.5c0-0.135 0.115-0.25 0.25-0.25 0 0 7.749-0 7.75 0v3.5c0 0.276 0.224 0.5 0.5 0.5h3.5v9.75z"
                          />
                        </svg>
                      </span>
                    </div>
                  </label>
                  <div
                    class="text-sm w-full text-dial-gray-dark"
                  >
                    Note: Supported file types are jpg, png, and bmp
                  </div>
                </div>
                <div
                  class="form-field-wrapper"
                  data-testid="dataset-geographicCoverage"
                >
                  <label
                    class="form-field-label"
                    for="geographicCoverage"
                  >
                    Geograpic Coverage
                  </label>
                  <input
                    class="w-full"
                    id="geographicCoverage"
                    name="geographicCoverage"
                    placeholder="Geograpic Coverage"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="form-field-wrapper"
                  data-testid="dataset-timeRange"
                >
                  <label
                    class="form-field-label"
                    for="timeRange"
                  >
                    Time Range
                  </label>
                  <input
                    class="w-full"
                    id="timeRange"
                    name="timeRange"
                    placeholder="Time Range"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="form-field-wrapper"
                  data-testid="dataset-license"
                >
                  <label
                    class="form-field-label"
                    for="license"
                  >
                    License
                  </label>
                  <input
                    class="w-full"
                    id="license"
                    name="license"
                    placeholder="License"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="form-field-wrapper"
                  data-testid="dataset-languages"
                >
                  <label
                    class="form-field-label"
                    for="languages"
                  >
                    Languages
                  </label>
                  <input
                    class="w-full"
                    id="languages"
                    name="languages"
                    placeholder="Languages"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="form-field-wrapper"
                  data-testid="dataset-dataFormat"
                >
                  <label
                    class="form-field-label"
                    for="dataFormat"
                  >
                    Data Format
                  </label>
                  <input
                    class="w-full"
                    id="dataFormat"
                    name="dataFormat"
                    placeholder="Data Format"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="w-full lg:w-1/2"
              >
                <div
                  class="form-field-wrapper"
                  data-testid="dataset-description"
                >
                  <label
                    class="form-field-label required-field"
                  >
                    Description
                  </label>
                  <div
                    class="relative"
                  >
                    <svg
                      class="absolute text-lg inset-x-1/2 top-10 spinner"
                      fill="currentColor"
                      height="2em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      width="2em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
                      />
                    </svg>
                    <div
                      class="html-editor"
                    >
                      <textarea
                        id="description-editor"
                        style="visibility: hidden;"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex flex-wrap text-xl mt-8 gap-3"
            >
              <button
                class="submit-button"
                data-testid="submit-button"
                type="submit"
              >
                Submit Dataset
              </button>
              <button
                class="cancel-button"
                type="button"
              >
                Cancel
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for the DatasetForm component. Should match snapshot -. edit. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="flex flex-col"
  >
    <div
      class="hidden lg:block px-8"
    >
      <div
        class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
      >
        <a
          class="inline text-dial-sapphire h5"
          href="/"
        >
          Home
        </a>
        <div
          class="inline h5"
        >
           &gt; 
          <a
            class="text-dial-gray-dark"
            href="/"
          />
        </div>
      </div>
    </div>
    <div
      class="pb-8 px-8"
    >
      <div
        class="sm:px-0 max-w-full mx-auto"
        id="content"
      >
        <form>
          <div
            class="bg-edit shadow-md rounded px-8 pt-6 pb-12 mb-4 flex flex-col gap-3"
          >
            <div
              class="text-2xl font-semibold text-dial-sapphire pb-4"
            >
              Edit Test Dataset
            </div>
            <div
              class="flex flex-col lg:flex-row gap-4"
            >
              <div
                class="w-full lg:w-1/2 flex flex-col gap-y-3"
              >
                <div
                  class="form-field-wrapper"
                  data-testid="dataset-name"
                >
                  <label
                    class="form-field-label required-field"
                    for="name"
                  >
                    Dataset Name
                  </label>
                  <input
                    class="w-full"
                    data-testid="dataset-name-input"
                    id="name"
                    name="name"
                    placeholder="Dataset Name"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="form-field-wrapper"
                >
                  <label
                    class="form-field-label"
                  >
                    Dataset Other Name
                  </label>
                  <div
                    class="flex gap-x-2"
                  >
                    <input
                      class="w-full"
                      name="aliases.0.value"
                      placeholder="Dataset Other Name"
                      type="text"
                      value=""
                    />
                    <button
                      class="shadow-md p-3 bg-dial-sapphire hover:bg-dial-angel"
                      data-testid="icon-button"
                      type="button"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 448 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                <div
                  class="form-field-wrapper"
                  data-testid="dataset-website"
                >
                  <label
                    class="form-field-label required-field"
                    for="website"
                  >
                    Data URL
                  </label>
                  <div
                    class="border border-transparent url-input bg-white flex items-center"
                  >
                    <span
                      class="select-none text-dial-gray"
                    >
                      https://
                    </span>
                    <input
                      class="url w-full placeholder-dial-gray focus:outline-0"
                      id="website"
                      placeholder="Data URL"
                      value="www.testdataset.org"
                    />
                  </div>
                </div>
                <div
                  class="form-field-wrapper"
                  data-testid="dataset-visualizationUrl"
                >
                  <label
                    class="form-field-label"
                    for="visualizationUrl"
                  >
                    Dataset Visualization URL
                  </label>
                  <div
                    class="border border-transparent url-input bg-white flex items-center"
                  >
                    <span
                      class="select-none text-dial-gray"
                    >
                      https://
                    </span>
                    <input
                      class="url w-full placeholder-dial-gray focus:outline-0"
                      id="visualizationUrl"
                      placeholder="Dataset Visualization URL"
                      value="www.visualization.testdataset.org"
                    />
                  </div>
                </div>
                <div
                  class="form-field-wrapper"
                >
                  <label
                    class="form-field-label"
                  >
                    Dataset Type
                  </label>
                  <div
                    class=" css-l45kjq-container"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-:r1:-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class="react-select__control css-qv4grc-control"
                    >
                      <div
                        class="react-select__value-container react-select__value-container--has-value css-17t7gkf-ValueContainer"
                      >
                        <div
                          class="react-select__single-value css-1dimb5e-singleValue"
                        >
                          Dataset
                        </div>
                        <div
                          class="react-select__input-container css-qbdosj-Input"
                          data-value=""
                        >
                          <input
                            aria-autocomplete="list"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class="react-select__input"
                            id="react-select-id-datasetType"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="form-field-wrapper"
                  data-testid="dataset-logo"
                >
                  <label
                    class="form-field-label"
                  >
                    Logo
                  </label>
                  <label
                    class="flex items-center"
                  >
                    <input
                      accept=".jpg,.jpeg,.png,.bmp"
                      class="bg-white file:hidden w-full pr-10"
                      data-testid="file-uploader"
                      name="imageFile"
                      type="file"
                    />
                    <div
                      class="-ml-11 flex p-1"
                    >
                      <span
                        class="h-full pl-1 border-l text-2xl text-dial-gray-dark border-dial-gray-dark"
                      >
                        <svg
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          version="1.1"
                          viewBox="0 0 16 16"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M13 14h-10v-2l3-5 4.109 5 2.891-2v4z"
                          />
                          <path
                            d="M13 7.5c0 0.828-0.672 1.5-1.5 1.5s-1.5-0.672-1.5-1.5 0.672-1.5 1.5-1.5c0.828 0 1.5 0.672 1.5 1.5z"
                          />
                          <path
                            d="M14.341 3.579c-0.347-0.473-0.831-1.027-1.362-1.558s-1.085-1.015-1.558-1.362c-0.806-0.591-1.197-0.659-1.421-0.659h-7.75c-0.689 0-1.25 0.561-1.25 1.25v13.5c0 0.689 0.561 1.25 1.25 1.25h11.5c0.689 0 1.25-0.561 1.25-1.25v-9.75c0-0.224-0.068-0.615-0.659-1.421zM12.271 2.729c0.48 0.48 0.856 0.912 1.134 1.271h-2.406v-2.405c0.359 0.278 0.792 0.654 1.271 1.134zM14 14.75c0 0.136-0.114 0.25-0.25 0.25h-11.5c-0.135 0-0.25-0.114-0.25-0.25v-13.5c0-0.135 0.115-0.25 0.25-0.25 0 0 7.749-0 7.75 0v3.5c0 0.276 0.224 0.5 0.5 0.5h3.5v9.75z"
                          />
                        </svg>
                      </span>
                    </div>
                  </label>
                  <div
                    class="text-sm w-full text-dial-gray-dark"
                  >
                    Note: Supported file types are jpg, png, and bmp
                  </div>
                </div>
                <div
                  class="form-field-wrapper"
                  data-testid="dataset-geographicCoverage"
                >
                  <label
                    class="form-field-label"
                    for="geographicCoverage"
                  >
                    Geograpic Coverage
                  </label>
                  <input
                    class="w-full"
                    id="geographicCoverage"
                    name="geographicCoverage"
                    placeholder="Geograpic Coverage"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="form-field-wrapper"
                  data-testid="dataset-timeRange"
                >
                  <label
                    class="form-field-label"
                    for="timeRange"
                  >
                    Time Range
                  </label>
                  <input
                    class="w-full"
                    id="timeRange"
                    name="timeRange"
                    placeholder="Time Range"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="form-field-wrapper"
                  data-testid="dataset-license"
                >
                  <label
                    class="form-field-label"
                    for="license"
                  >
                    License
                  </label>
                  <input
                    class="w-full"
                    id="license"
                    name="license"
                    placeholder="License"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="form-field-wrapper"
                  data-testid="dataset-languages"
                >
                  <label
                    class="form-field-label"
                    for="languages"
                  >
                    Languages
                  </label>
                  <input
                    class="w-full"
                    id="languages"
                    name="languages"
                    placeholder="Languages"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="form-field-wrapper"
                  data-testid="dataset-dataFormat"
                >
                  <label
                    class="form-field-label"
                    for="dataFormat"
                  >
                    Data Format
                  </label>
                  <input
                    class="w-full"
                    id="dataFormat"
                    name="dataFormat"
                    placeholder="Data Format"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="w-full lg:w-1/2"
              >
                <div
                  class="form-field-wrapper"
                  data-testid="dataset-description"
                >
                  <label
                    class="form-field-label required-field"
                  >
                    Description
                  </label>
                  <div
                    class="relative"
                  >
                    <svg
                      class="absolute text-lg inset-x-1/2 top-10 spinner"
                      fill="currentColor"
                      height="2em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      width="2em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
                      />
                    </svg>
                    <div
                      class="html-editor"
                    >
                      <textarea
                        id="description-editor"
                        style="visibility: hidden;"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex flex-wrap text-xl mt-8 gap-3"
            >
              <button
                class="submit-button"
                data-testid="submit-button"
                type="submit"
              >
                Submit Dataset
              </button>
              <button
                class="cancel-button"
                type="button"
              >
                Cancel
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
